--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -234,13 +234,13 @@ S_B_2 : "🌷ᴄʜᴀɴɴᴇʟ🌷"
 S_B_3 : "˹ᴋɪᴅɴᴀᴘ ᴍᴇ ʙᴀʙᴇs˼"
 S_B_4 : "ʜᴇʟᴘ & ᴄᴏᴍᴍᴀɴᴅs"
 S_B_5 : "˹ᴋɪᴅɴᴀᴘ ᴍᴇ ʙᴀʙᴇs˼"
-S_B_6 : "❄️sᴜᴘᴘᴏʀᴛ❄️"
+S_B_6 : "❄️𝙎𝙐𝙋𝙋𝙊𝙍𝙏❄️"
 S_B_7 : "💗ʀᴇᴘᴏ💗"
 S_B_8 : "ʏᴏᴜᴛᴜʙᴇ"
-S_B_9 : "❄️sᴜᴘᴘᴏʀᴛ❄️"
+S_B_9 : "❄️𝙎𝙐𝙋𝙋𝙊𝙍𝙏❄️"
 S_B_10 : "𝙎𝙋𝘼𝙍𝙏𝘼𝙉"
 S_B_11 : "✧ ᴀᴅᴅ ᴍᴇ ✧"
-S_B_12 : "✨ sᴜᴩᴩᴏʀᴛ ✨"
+S_B_12 : "✨ 𝙎𝙐𝙋𝙋𝙊𝙍𝙏 ✨"
 S_B_13 : "🥀 ᴅᴇᴠᴇʟᴏᴩᴇʀ 🥀"
 
 H_B_1 : "ᴥ︎︎︎ ᴀᴅᴍɪɴ ᴥ︎︎︎"
