--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -229,19 +229,19 @@ CLOSE_BUTTON  : "✧ ᴄʟᴏsᴇ ✧"
 CLOSEMENU_BUTTON  : "✧ ᴄʟᴏsᴇ ✧"
 BACK_BUTTON : "✧ вα¢к ✧"
 
-S_B_1 : "˹ᴋɪᴅɴᴀᴘ ᴍᴇ ʙᴀʙᴇs˼"
-S_B_2 : "🌷ᴄʜᴀɴɴᴇʟ🌷"
-S_B_3 : "˹ᴋɪᴅɴᴀᴘ ᴍᴇ ʙᴀʙᴇs˼"
-S_B_4 : "ʜᴇʟᴘ & ᴄᴏᴍᴍᴀɴᴅs"
-S_B_5 : "˹ᴋɪᴅɴᴀᴘ ᴍᴇ ʙᴀʙᴇs˼"
-S_B_6 : "❄️𝙎𝙐𝙋𝙋𝙊𝙍𝙏❄️"
-S_B_7 : "💗ʀᴇᴘᴏ💗"
-S_B_8 : "ʏᴏᴜᴛᴜʙᴇ"
-S_B_9 : "❄️𝙎𝙐𝙋𝙋𝙊𝙍𝙏❄️"
+S_B_1 : "˹𝙆𝙄𝘿𝙉𝘼𝙋 𝙈𝙀 𝘽𝘼𝘽𝙀𝙎˼"
+S_B_2 : "𝘾𝙃𝘼𝙉𝙉𝙀𝙇"
+S_B_3 : "˹𝙆𝙄𝘿𝙉𝘼𝙋 𝙈𝙀 𝘽𝘼𝘽𝙀𝙎˼"
+S_B_4 : "𝙃𝙀𝙇𝙋 & 𝘾𝙊𝙈𝙈𝘼𝙉𝘿𝙎"
+S_B_5 : "˹𝙆𝙄𝘿𝙉𝘼𝙋 𝙈𝙀 𝘽𝘼𝘽𝙀𝙎˼"
+S_B_6 : "𝙎𝙐𝙋𝙋𝙊𝙍𝙏"
+S_B_7 : "𝙍𝙀𝙋𝙊"
+S_B_8 : "𝙔𝙊𝙐𝙏𝙐𝘽𝙀"
+S_B_9 : "𝙎𝙐𝙋𝙋𝙊𝙍𝙏"
 S_B_10 : "𝙎𝙋𝘼𝙍𝙏𝘼𝙉"
-S_B_11 : "✧ ᴀᴅᴅ ᴍᴇ ✧"
-S_B_12 : "✨ 𝙎𝙐𝙋𝙋𝙊𝙍𝙏 ✨"
-S_B_13 : "🥀 ᴅᴇᴠᴇʟᴏᴩᴇʀ 🥀"
+S_B_11 : " 𝘼𝘿𝘿 𝙈𝙀 "
+S_B_12 : " 𝙎𝙐𝙋𝙋𝙊𝙍𝙏 "
+S_B_13 : " 𝘿𝙀𝙑𝙀𝙇𝙊𝙋𝙀𝙍 "
 
 H_B_1 : "ᴥ︎︎︎ ᴀᴅᴍɪɴ ᴥ︎︎︎"
 H_B_2 : "ᴥ︎︎︎ ᴀᴜᴛʜ ᴥ︎︎︎"
